# my-langgraph-studies

./: README.md  env_example.txt  requirements.txt
01_learn_langgraph_basics/: 01_build_a_basic_chatbot.ipynb  02_add_tools.ipynb  03_add_memory.ipynb  04_human_in_the_loop.ipynb  05_customize_state.ipynb  06_time_travel.ipynb
02_workflows_and_agents/: 01_augmented_llm.py  02_prompt_chaining.py  03_parallelization.py  04_routing.py  05_orchestrator_worker.py  06_evaluator_optimizer.py  07_01_agent_coded.py  07_02_agent_prebuilt.py
03_how_to_fix_your_context/: 01_rag.py  02_tool_loadout.py  03_context_quarantine.py  04_context_pruning.py  05_context_summarization.py  06_context_offloading.py  how_to_fix_your_context.md
04_foundation_introduction_to_langgraph/: module_structure.md
05_langchain_tutorials/: 01_llm_chain.ipynb  02_retrievers.ipynb  03_classification.ipynb  04_extraction.ipynb  05_chatbot.ipynb  06_agents.ipynb  07-rag.md  07_rag.ipynb  08_qa_chat_history.ipynb  09_sql_qa.ipynb  10_summarization.ipynb  11_graph.ipynb  Chinook.db  README.md  index.md
05_langgraph_studies/: 01_basic_graph.py  02_state_schema.py  (+5 more)
07_langchain_v1/: 01_langchainv1_basic.py  02_langchainv1_tool.py  03_langchainv1_tools.py  04_langchainv1_supervisor.py  05_langchainv1_quickstart.py  06_langchainv1_mcp_github.py  07_langchainv1_mcp_http.py  08_langgraph_agent.py  09_langgraph_mcp.py  10_langchainv1_agents_handoffs.py  main.py  pyproject.toml
08_middleware/: 01_sum_and_hitltest.py  main.py  pyproject.toml
08_middleware/studio/: 01_sum_and_hitltest.py  langgraph.json
(+29 files in other folders)
