[project]
name = "07-langchain-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.6.0",
    "langchain==1.0.0a5",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.33",
    "rich>=14.1.0",
]
